force-app/main/default/objects/Participation__c/Participation__c.object-meta.xml
<CustomObject>
    <label>Participation</label>
    <nameField>
        <displayFormat>PAR-{0000}</displayFormat>
        <label>Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>