force-app/main/default/objects/Participation__c/fields/Both_Ids__c.field-meta.xml
<CustomField>
    <fullName>Both_Ids__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Both_Ids</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>