force-app/main/default/objects/Participation__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Participations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>