force-app/main/default/objects/Participation__c/fields/Into_Completed__c.field-meta.xml
<CustomField>
    <fullName>Into_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Into_Completed</label>
    <type>Checkbox</type>
</CustomField>