force-app/main/default/objects/Participation__c/fields/Is_Overflow__c.field-meta.xml
<CustomField>
    <fullName>Is_Overflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Overflow</label>
    <type>Checkbox</type>
</CustomField>