force-app/main/default/objects/Participation__c/validationRules/Cannot_Overflow.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Overflow</fullName>
    <active>true</active>
    <errorConditionFormula>Is_Overflow__c</errorConditionFormula>
    <errorDisplayField>Is_Overflow__c</errorDisplayField>
    <errorMessage>Attendee count may not exceed quota.</errorMessage>
</ValidationRule>