force-app/main/default/objects/Participation__c/validationRules/Enter_Completed_Course.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Completed_Course</fullName>
    <active>true</active>
    <errorConditionFormula>Into_Completed__c</errorConditionFormula>
    <errorMessage>Cannot enroll into a completed course</errorMessage>
</ValidationRule>