force-app/main/default/objects/Participation__c/validationRules/Into_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Into_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>Into_Completed__c</errorConditionFormula>
    <errorDisplayField>Into_Completed__c</errorDisplayField>
    <errorMessage>Cannot enroll students into completed class</errorMessage>
</ValidationRule>